# ZebraFlash

./: CMakeLists.txt  README.md
benchmark/: benchmark.cpp  benchmark.h
config/: params_input_file.yml
motion-detector/: motion_detector.cpp  motion_detector.h
tests/: test_application.cpp
tests/benchmarks/: benchmark_common.h
tests/benchmarks/farne_tests/: benchmark_farne_cm_test.cpp  benchmark_farne_cs_test.cpp  benchmark_farne_g_test.cpp
tests/benchmarks/lucas_kanade_tests/: benchmark_lk_cm_test.cpp  benchmark_lk_g_test.cpp
tests/benchmarks/yolo_tests/: benchmark_yolo_cs_test.cpp  benchmark_yolo_g_test.cpp
